chrome/src/components/Main/MainApp/Docker/Widgets/Widgets.scss
//General Widget Styles

.widget {
}

.widget-nav{
  box-sizing: border-box;
  height: 40px;
  background-color: white;
  width: 100%;
  padding: 12px;
}

.widget-title {
  font-weight: 300;
  margin: 0;
  color: #4A4A4A;
  -webkit-animation: fadein 0.5s 1 alternate forwards;
}


h4 {
  color: #4A4A4A;
}

.widget-contents {
  width: 100%;
  height: 90%;
  overflow-y: scroll;
  -webkit-animation: fadein 0.5s 1 alternate forwards;
}

.channelInvitations {
  color: #4A4A4A;
  font-size: 1.2em;
  margin: 20px 0px 0px 45px;
  font-weight: 400;
}

.channelInvitationsDisplayNone {
  color: #4A4A4A;
  font-size: 1em;
  display: none;
}

.currentChannels {
  color: #4A4A4A;
  font-size: 1.2em;
  font-weight: 400;
  margin: 20px 0px 0px 45px;
  padding: 0;
}

.check {
  width: 15px;
  padding: 10px 0px 0 0;
  margin: 0;
  position: absolute;
  left: 15px;
  opacity: 0.5;
  transition-timing-function: ease-out;
  -webkit-transition-timing-function: ease-out;
  transition: 0.25s;
  -webkit-transition: 0.25s;
  cursor: pointer;
  &:hover {
    opacity: 1.0;
    transform: scale(1.2);
  }
}

.cross {
  width: 13px;
  // padding: 10px 0px 0 0;
  margin: 0;
  position: absolute;
  left: 15px;
  opacity: 0.5;
  transition-timing-function: ease-out;
  -webkit-transition-timing-function: ease-out;
  transition: 0.25s;
  -webkit-transition: 0.25s;
  cursor: pointer;
  &:hover {
    opacity: 1.0;
    transform: scale(1.2);
  }
}

@keyframes fadein {
  from { opacity: 0; }
  to { opacity: 1 ; }
}

